# ImageHandlerNetworkSystem

./: .gitignore  .gitmodules  CMakeLists.txt  CMakelists.txt  README.md
apps/ics-app/: CMakeLists.txt  CMakelists.txt
apps/ics-app/src/: ICSMain.cpp
apps/ih-app/: CMakeLists.txt
apps/ih-app/src/: IHCMain.cpp
apps/wcs-app/: CMakeLists.txt  CMakelists.txt
apps/wcs-app/src/: WCSMain.cpp
libs/ZMQ/: zmq.hpp
libs/comms-lib/: CMakeLists.txt  CMakelists.txt
libs/comms-lib/inc/: ZmqHandlers.hpp
libs/comms-lib/include/: CommsHandlers.hpp  Message.h  ZmqHandlers.hpp
libs/comms-lib/src/: CommsHandlers.cpp  ZmqHandlers.cpp
libs/opencv-lib/: CMakeLists.txt
libs/opencv-lib/cmake/modules/: OpenCVConfig.cmake  OpenCVModules-release.cmake
libs/proto-lib/: CMakeLists.txt  CMakelists.txt
libs/proto-lib/proto/: message.proto
libs/worker-lib/: CMakeLists.txt
libs/worker-lib/include/: imageFiltration.h
libs/worker-lib/src/: imageFiltration.cpp
